--- a/Module2Folder/styles.css
+++ b/Module2Folder/styles.css
@@ -1,5 +1,6 @@
 body {
   background-color: lightblue;
+  font-family: Tahoma;
 }
 
 * { 
@@ -7,39 +8,60 @@ body {
 }
 
 h1 {
-  color: navy;
-  margin-left: 20px;
+  color: black;
+  text-align: center;
+  font-size:  175%;
 }
 
 p {
-	border:  1px navy;
 	background-color: lightgoldenrodyellow;
-	/*width: 90%;*/
 	height:  150px;
 	margin-right:  15px;
 	margin-left:  15px;
+	margin-top: 20px;
+	position:  relative;
+	border: 1px solid black;
 	}
 
 div {
-	border:  5px indianred;
-	background-color: grey;
+	/*background-color: grey;*/
 	position:  relative;
 
 }
 
 .food-title {
-	all: unset;
-	positon:  absolute;
-	background-color: goldenrod;
-	color: limegreen;
-	height:  10px;
-	top:  100 px;
-	right:  100 px;
+	width:  80px;
+	height: 30px;
+	background-color: royalblue;
+	position:  absolute;
+	color: black;
+	top:  0px;
+	right:  0px;
+	border: 1px solid black;
+	font-size:  125%;
+	
 
 }
 
 .food-description {
-	background-color: darkred;
+	position:  absolute;
+	top:  40px;
+	height: auto;
+	border: none;
+	left:  5px;
+	right:  5px;
+}
+
+#TitleBeef {
+	background-color: peru;
+}
+
+#TitleChicken {
+	background-color: forestgreen;
+}
+
+#TitlePork {
+	background-color: dodgerblue;
 }
 
 /*Simple Responsive Framework */
@@ -52,7 +74,6 @@ div {
 @media (min-width: 992px){
 	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
 		float:  left;
-		/*border:  1px solid black;*/
 	}
 	.col-lg-1 {
 		width:  8.33%;
@@ -97,7 +118,6 @@ div {
 @media (min-width: 768px) and (max-width:  991px){
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
 		float:  left;
-		/*border:  1px solid green;*/
 	}
 	.col-md-1 {
 		width:  8.33%;
@@ -142,7 +162,6 @@ div {
 @media (max-width: 767px){
 	.col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
 		float:  left;
-		/*border:  1px solid green;*/
 	}
 	.col-sm-1 {
 		width:  8.33%;
